css/Swapnali_Mobile.css
.header {
	height : auto;
}

.hamburgerMenu {
	padding: 0;
    height: 100%;
	padding-right: 2%;
	display:none !important;
}

.hamburgerButton {
	float: right;
    background-color: transparent;
    border: 0px;
    font-size: 20px;
    transition: all 0.2s ease-in-out;
    -webkit-transition: all 0.2s ease-in-out;
    padding-right: 5%;
    padding-top: 3%;
}

.hamburgerButton img {
    height: 30px;
    width: 30px;
}

.logoHolder {
    height: 10%;
}

.hamburgerMenuList {
	text-align:center;
	padding : 0;
	list-style: none;
	margin:0;
}

.menuOption {
	display : table;
	text-align : center;
	height:auto;
}

.menuOptionText {
	display:table-cell;
}

.menuOptionText div {
	width: 100%;
}

.hamburgerMenu {
	text-align:center;
	display:none;
}

.workImage {
	padding-right:0px;
	padding-left:0px;
	margin-top:5px;
	margin-bottom:5px;
}

.workImage img {
	width:100%;
}

.workImage .after {
	opacity:0;
}

#menuNavbar {
    display: none;
}

.menuOptionText {
	display:table-cell;
	vertical-align:middle;
	border : 0;
	color : #000000;
	cursor:pointer;
	font-size:15px;
	border-radius: 0 !important;
}

.menuOptionTextSelected {
	color : #000000 !important;
	text-decoration: line-through !important;
}

.connectImageHolder img {
	width:100%;
}

.aboutMeImageHolder img {
	width:100%;
}

.aboutMeContent {
    text-align: center;
    padding-top: 5px;
}

.headerSocialMedia {
	display:none;
}

.portfolioInfo {
    display: block;
    font-size: 22px;
    color: white;
	text-align: center;
	font-family: "fontKarlaRegular";
	font-weight:normal;
	position: relative;
	top:45%;
	height:100%;
	width:100%;
}

.connectContentRow {
	margin-top : 10px;
}

.aboutMeImageHolder {
	padding :0;
	margin-bottom:10px;
}

.connectImageHolder {
	padding :0;
}

.mainContent {
	margin-top:10px;
}

.sendButtonHolder {
	padding:0;
}

#portfolioDetailCalligraphy img {
	max-width:100%;
}

.closeButton {
    padding-right: 10px;
}

button {
	padding:10px;
}

.connectText {
	text-align:center;
	margin-top:20px;
	margin-bottom:20px;
	width:100%;
}

.connectFormText {
	text-align:center;
}

.connectFollow {
	text-align: center;
}

.portfolioDetailImageHolder img {
	max-width : 100%;
}

